--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <!-- Whatsaap link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/desktop.css">
-    <link rel="stylesheet" href="css/styles.css"> 
-    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/mobile.css">    
+    <link rel="stylesheet" href="css/styles.css">     
     <title>Tapetes publicitarios</title>
   </head>
   <body>
@@ -22,7 +23,7 @@
           </div>
           <div class="nav_options">
             <ul>
-              <li><a href="#">Inicio</a></li>
+              <li><a href="#info">Inicio</a></li>
               <li><a href="#productos">Productos</a></li>
               <li><a href="#galeria">Galeria</a></li>
               <li><a href="#contacto">Contacto</a></li>
@@ -31,18 +32,36 @@
         </nav>
       </header>
       <!-- SLIDER -->
-       <div class="carousel">
-      <div class="slider"> 
-        <ul>
-          <li><img src="img/slider.jpg" alt=""></li>
-          <li><img src="img/slider3.jpg" alt=""></li>
-          <li><img src="img/slider2.jpg" alt=""></li>
-          <li><img src="img/slider4.jpg" alt=""></li>          
-        </ul>
+      <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/slider1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/slider2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/slider3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    </div> 
+    </div>
       
-      <section class="info">
+      <section class="info" id="info">
         <h1> GLOBAL PUBLICIDAD, SOMOS FABRICANTES #1 DE TAPETES PUBLICITARIOS DE LA MÁS ALTA CALIDAD EN TODO EL PAÍS</h1>
         <div class="info-content">
           <div class="info-section">
@@ -52,7 +71,7 @@
           </div>
           <div class="info-text">
           <div class="">
-            <h3>Tapetes Publicitarios</h3>
+            <h2>Tapetes Publicitarios</h2>
             <p>El tapete publicitario es un producto poli funcional con excelentes diseños y de muy buena calidad, protege los pisos de marmol, porcelanato, madera, cerámica y alfombras, reduce el costo de mantenimiento y su forma argollada y entrelazada retiene más el mugre que cualquier otro sistema de tapetes. Amortigua sus pasos, es antidelizante, es un elemento decorativo ya que es un excelente medio publicitario que permite ser personalizado para dar mayor fuerza a su imagen corporativa.</p>
           </div>
         </div>
@@ -151,7 +170,7 @@
 
         <section class="galery" id="galeria">
           <h3>Galeria de productos</h3>
-          <div class="galery-content">
+          <div class="galery-content m-4">
             <div>
               <img src="img/slider.jpg" alt="">
             </div>
@@ -257,7 +276,7 @@
             <img src="img/envios.png" alt="">
             <h4>ENVIOS A TODA COLOMBIA</h4>
           </div>
-          <div>
+          <div class="text-center">
             <h4> DIRECCION Y CONTACTO</h4>
             <p>info de contacto</p>
           </div>
@@ -266,8 +285,8 @@
           </div>
         </footer>         
   </div>    
-    <!-- <script src="js/jquery-3.5.1.min.js"></script>    
+     <script src="js/jquery-3.5.1.min.js"></script>    
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/popper.min.js"></script> -->
+    <script src="js/popper.min.js"></script>
   </body>
 </html>
