--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,12 +18,12 @@
 <body>
   <div class="container">
     <header>
-      <nav>
-        <div class="logo">
+      <nav class="row">
+        <div class="logo text-center col-sm col-md-5  col-lg-4">
           <!-- <img src="img/logo.png" alt="logo global publicidad"> -->
           <h2>GLOBAL PUBLICIDAD</h2>
         </div>
-        <div class="nav_options">
+        <div class="nav_options text-center col-sm col-md-7 col-lg-8">
           <ul>
             <li><a href="#info">Inicio</a></li>
             <li><a href="#productos">Productos</a></li>
@@ -65,13 +65,13 @@
     <!-- INFO -->
     <section class="info" id="info">
       <h1> SOMOS FABRICANTES #1 DE TAPETES PUBLICITARIOS DE LA MÁS ALTA CALIDAD EN TODO EL PAÍS</h1>
-      <div class="info-content">
-        <div class="info-section">
+      <div class="row info-content">
+        <div class="info-section col-sm-12 col-md-12 col-lg-6 col-xl-6 info-mg">
           <figure class="info-img">
             <img src="img/example.PNG" alt="">
           </figure>
         </div>
-        <div class="info-text">
+        <div class="info-text col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="">
             <h2>Tapetes Publicitarios</h2>
             <p>El tapete publicitario es un producto poli funcional con excelentes diseños y de muy buena calidad, protege los pisos de marmol, porcelanato, madera, cerámica y alfombras, reduce el costo de mantenimiento y su forma argollada y entrelazada retiene más el mugre que cualquier otro sistema de tapetes. Amortigua sus pasos, es antidelizante, es un elemento decorativo ya que es un excelente medio publicitario que permite ser personalizado para dar mayor fuerza a su imagen corporativa.</p>
@@ -80,38 +80,38 @@
     </section>
     <section class="products" id="productos">
       <h2>PRODUCTOS</h2>
-      <div class="products-content">
-        <div>
+      <div class="products-content text-center row">
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <figure>
             <img src="img/product.png" alt="">
           </figure>
           <h3>Tapete</h3>
         </div>
-        <div>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <figure>
             <img src="img/product.png" alt="">
           </figure>
           <h3>Tapete</h3>
         </div>
-        <div>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <figure>
             <img src="img/product.png" alt="">
           </figure>
           <h3>Tapete</h3>
         </div>
-        <div>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <figure>
             <img src="img/product.png" alt="">
           </figure>
           <h3>Tapete</h3>
         </div>
-        <div>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <figure>
             <img src="img/product.png" alt="">
           </figure>
           <h3>Tapete</h3>
         </div>
-        <div>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <figure>
             <img src="img/product.png" alt="">
           </figure>
@@ -122,139 +122,149 @@
     <!-- SECTION PRODUCTS -->
     <section class="products">
       <section class="product-1 color-info">
-        <div class="product-img">
+        <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img order-section">
           <figure>
             <img src="img/carpet.jpg" alt="">
           </figure>
         </div>
-        <div class="product-info">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
           <h3>PRODUCTO 1</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
+      </div>
       </section>
       <section class="product-1">
-        <div class="product-info">
-          <h3>PRODUCTO 2</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
-        </div>
-        <div class="product-img">
+        <div class="row">        
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img">
           <figure>
             <img src="img/carpet1.jpg" alt="">
           </figure>
         </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
+          <h3>PRODUCTO 2</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
+        </div>
+      </div>
       </section>
       <section class="product-1 color-info">
-        <div class="product-img">
+        <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img order-section">
           <figure>
             <img src="img/carpet2.jpg" alt="">
           </figure>
         </div>
-        <div class="product-info">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
           <h3>PRODUCTO 3</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
+      </div>
       </section>
       <section class="product-1">
-        <div class="product-info">
-          <h3>PRODUCTO 4</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
-        </div>
-        <div class="product-img">
+        <div class="row">        
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img">
           <figure>
             <img src="img/carpet.jpg" alt="">
           </figure>
         </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
+          <h3>PRODUCTO 4</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
+        </div>
+      </div>
       </section>
     </section>
     <!-- GALERY -->
     <section class="galery" id="galeria">
       <h3>Galeria de productos</h3>
       <div class="galery-content m-4">
-        <div>
+        <div class="row text-center">
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
-        <div>
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
           <img src="img/slider.jpg" alt="">
         </div>
+      </div>
       </div>
     </section>
     <!-- BENEFICIOS -->
     <section class="benefits">
       <h2> Ventajas de un tapete publicitario</h2>
-      <div class="benefits-items">
-        <div class="benefits-card">
+      <div class=" row benefits-items">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/protect.png" alt="">
           </figure>
           <h4>Proteccion</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/saving.png" alt="">
           </figure>
           <h4>Ahorro</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/aparienc.png" alt="">
           </figure>
           <h4>Apariencia</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/deslizante.png" alt="">
           </figure>
           <h4>Antideslizante</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/mainten.png" alt="">
           </figure>
           <h4>mantenimiento</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/quality.png" alt="">
           </figure>
           <h4>Calidad</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/colours.png" alt="">
           </figure>
           <h4>Colores</h4>
         </div>
-        <div class="benefits-card">
+        <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
             <img src="img/personalize.png" alt="">
           </figure>
@@ -268,23 +278,25 @@
         <i class="fa fa-whatsapp my-float"></i>
       </a>
     </div>
-    <footer id="contacto">
-      <div class="text-center">
+    <footer id="contacto" class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6 text-center">
         <h4> DIRECCION Y CONTACTO</h4>
-        <p>info de contacto</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, culpa!</p>
+        
       </div>
-      <div>
+      <div class="col-sm-12 col-md-6 col-lg-6 text-center">
         <img src="img/envios.png" alt="">
         <h4>ENVIOS A TODA COLOMBIA</h4>
       </div>
-      <div>
+      <div class="col-sm-12 col-md-12 col-lg-12 text-center">
         Diseñado Por
       </div>
     </footer>
   </div>
   <script src="js/jquery-3.5.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  
 </body>
 
 </html>
