--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <!-- Whatsaap link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Tapetes publicitarios</title>
@@ -18,12 +22,12 @@
 <body>
   <div class="container">
     <header>
-      <nav class="row">
-        <div class="logo text-center col-sm col-md-5  col-lg-4">
-          <!-- <img src="img/logo.png" alt="logo global publicidad"> -->
-          <h2>GLOBAL PUBLICIDAD</h2>
+      <nav class="row nav">
+        <div class="logo text-center col-sm col-md-4  col-lg-4">
+           <!-- <img src="img/global.png" class="nav-logo" alt="logo global publicidad class">  -->
+           <p>GLOBAL PUBLICIDAD<p>
         </div>
-        <div class="nav_options text-center col-sm col-md-7 col-lg-8">
+        <div class="nav_options text-center col-sm col-md-8 col-lg-8">
           <ul>
             <li><a href="#info">Inicio</a></li>
             <li><a href="#productos">Productos</a></li>
@@ -43,7 +47,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/slider3.jpg" class="d-block w-100" alt="...">
+            <img src="img/slider-collage.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="img/slider3.jpg" class="d-block w-100" alt="...">
@@ -64,58 +68,70 @@
     </div>
     <!-- INFO -->
     <section class="info" id="info">
-      <h1> SOMOS FABRICANTES #1 DE TAPETES PUBLICITARIOS DE LA MÁS ALTA CALIDAD EN TODO EL PAÍS</h1>
-      <div class="row info-content">
-        <div class="info-section col-sm-12 col-md-12 col-lg-6 col-xl-6 info-mg">
-          <figure class="info-img">
-            <img src="img/example.PNG" alt="">
-          </figure>
+      <h1 class="text-center p-2 m-2"> SOMOS FABRICANTES #1 DE TAPETES PUBLICITARIOS DE LA MÁS ALTA CALIDAD EN TODO EL PAÍS</h1>
+      <div class="welcome p-2 m-2">
+        <div class="row">
+        <div class="info-section col-sm-12 col-md-12 col-lg-6 col-xl-6 p-1">
+          <div class="content-img">
+            <img src="img/bienvenido.PNG" alt="" class="img_content">
+          </div>
         </div>
         <div class="info-text col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="">
-            <h2>Tapetes Publicitarios</h2>
+            <h2 class="text-center">Tapetes Publicitarios</h2>
             <p>El tapete publicitario es un producto poli funcional con excelentes diseños y de muy buena calidad, protege los pisos de marmol, porcelanato, madera, cerámica y alfombras, reduce el costo de mantenimiento y su forma argollada y entrelazada retiene más el mugre que cualquier otro sistema de tapetes. Amortigua sus pasos, es antidelizante, es un elemento decorativo ya que es un excelente medio publicitario que permite ser personalizado para dar mayor fuerza a su imagen corporativa.</p>
           </div>
         </div>
+      </div>
     </section>
     <section class="products" id="productos">
-      <h2>PRODUCTOS</h2>
+      <h2 class="title-bold text-center p-2">PRODUCTOS</h2>
       <div class="products-content text-center row">
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <figure>
-            <img src="img/product.png" alt="">
-          </figure>
-          <h3>Tapete</h3>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+          <div class="card-img">
+            <img src="img/atrapamugre.PNG" alt="" class="img-icon">
+          </div>
+          <p>Tapete Atrapamugre </p>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <figure>
-            <img src="img/product.png" alt="">
-          </figure>
-          <h3>Tapete</h3>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+          <a href="#desinfectante">
+          <div class="card-img">
+            <img src="img/tapete_desinfectante.PNG" alt="" class="img-icon">
+          </div>
+          <p>Tapete desinfectante </p>
+        </a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <figure>
-            <img src="img/product.png" alt="">
-          </figure>
-          <h3>Tapete</h3>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+          <a href="#publicitario">
+          <div class="card-img">
+            <img src="img/atrapamugre.PNG" alt="" class="img-icon">
+          </div>
+          <p>Tapete Publicitario </p>
+        </a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <figure>
-            <img src="img/product.png" alt="">
-          </figure>
-          <h3>Tapete</h3>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+          <a href="#luminosos">
+          <div class="card-img">
+            <img src="img/luminosos.PNG" alt="" class="img-icon">
+          </div>
+          <p>Avisos luminosos </p>
+        </a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <figure>
-            <img src="img/product.png" alt="">
-          </figure>
-          <h3>Tapete</h3>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+          <div class="card-img">
+            <a href="#tarjetas">
+            <img src="img/tarjetas.PNG" alt="" class="img-icon">
+          </div>
+          <p>Tarjetas publicitarias </p>
+        </a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <figure>
-            <img src="img/product.png" alt="">
-          </figure>
-          <h3>Tapete</h3>
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+          <div class="card-img">
+            <a href="#mugs">
+            <img src="img/mugs.PNG" alt="" class="img-icon">
+          </div>
+          <p>Mugs personalizados </p>
+        </a>
         </div>
       </div>
     </section>
@@ -129,7 +145,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3>PRODUCTO 1</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold">TAPETE ATRAPAMUGRE</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -142,7 +158,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3>PRODUCTO 2</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="desinfectante">TAPETE DESINFECTANTE</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -155,7 +171,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3>PRODUCTO 3</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="publicitario">TAPETE PUBLICITARIO</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -168,7 +184,33 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3>PRODUCTO 4</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="luminosos">AVISOS LUMINOSOS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
+        </div>
+      </div>
+      </section>
+      <section class="product-1 color-info">
+        <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img order-section">
+          <figure>
+            <img src="img/carpet2.jpg" alt="">
+          </figure>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
+          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="tarjetas">TARJETAS PUBLICITARIAS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
+        </div>
+      </div>
+      </section>
+      <section class="product-1">
+        <div class="row">        
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img">
+          <figure>
+            <img src="img/carpet.jpg" alt="">
+          </figure>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
+          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="mugs">MUGS PERSONALIZADOS</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -176,7 +218,7 @@
     </section>
     <!-- GALERY -->
     <section class="galery" id="galeria">
-      <h3>Galeria de productos</h3>
+      <h3 class="animate__animated animate__fadeInDown title-bold">Galeria de productos</h3>
       <div class="galery-content m-4">
         <div class="row text-center">
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
@@ -220,76 +262,76 @@
     </section>
     <!-- BENEFICIOS -->
     <section class="benefits">
-      <h2> Ventajas de un tapete publicitario</h2>
+      <h2 class="animate__animated animate__fadeInDown title-bold"> Ventajas de un tapete publicitario</h2>
       <div class=" row benefits-items">
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
-            <img src="img/protect.png" alt="">
+            <img src="img/protect.png" alt="" class="benefits-icon">
           </figure>
-          <h4>Proteccion</h4>
+          <p>Proteccion</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
-            <img src="img/saving.png" alt="">
+            <img src="img/saving.png" alt="" class="benefits-icon">
           </figure>
-          <h4>Ahorro</h4>
+          <p>Ahorro</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
-          <figure>
-            <img src="img/aparienc.png" alt="">
+          <figure class="benefit-card_box">
+            <img src="img/aparienc.png" alt="" class="benefits-icon">
           </figure>
-          <h4>Apariencia</h4>
+          <p>Apariencia</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
-          <figure>
-            <img src="img/deslizante.png" alt="">
+          <figure class="benefit-card_box">
+            <img src="img/deslizante.png" alt="" class="benefits-icon">
           </figure>
-          <h4>Antideslizante</h4>
+          <p>Antideslizante</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
-          <figure>
-            <img src="img/mainten.png" alt="">
+          <figure class="benefit-card_box">
+            <img src="img/mainten.png" alt="" class="benefits-icon">
           </figure>
-          <h4>mantenimiento</h4>
+          <p>mantenimiento</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
-          <figure>
-            <img src="img/quality.png" alt="">
+          <figure class="benefit-card_box">
+            <img src="img/quality.png" alt="" class="benefits-icon">
           </figure>
-          <h4>Calidad</h4>
+          <p>Calidad</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
-          <figure>
-            <img src="img/colours.png" alt="">
+          <figure class="benefit-card_box">
+            <img src="img/colours.png" alt="" class="benefits-icon">
           </figure>
-          <h4>Colores</h4>
+          <p>Colores</p>
         </div>
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
-          <figure>
-            <img src="img/personalize.png" alt="">
+          <figure class="benefit-card_box">
+            <img src="img/personalize.png" alt="" class="benefits-icon">
           </figure>
-          <h4>personalizar</h4>
+          <p>personalizar</p>
         </div>
       </div>
     </section>
     <!-- BOTON WHATSAPP-->
     <div class="boton-whatsapp">
-      <a class="boton-position" href="https://api.whatsapp.com/send?phone=+57 312 2481808&text= Hola quisiera realizar una cotización." target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=+57 312 2481808&text= Hola quisiera realizar una cotización." target="_blank" rel="noopener noreferrer" class="link-position" >
         <i class="fa fa-whatsapp my-float"></i>
       </a>
     </div>
     <footer id="contacto" class="row">
       <div class="col-sm-12 col-md-6 col-lg-6 text-center">
-        <h4> DIRECCION Y CONTACTO</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, culpa!</p>
+        <p> DIRECCION Y CONTACTO</p>
+        <p>Ibagué manzana c casa # 15 <br> 312589568 </p>
         
       </div>
       <div class="col-sm-12 col-md-6 col-lg-6 text-center">
         <img src="img/envios.png" alt="">
-        <h4>ENVIOS A TODA COLOMBIA</h4>
+        <p>ENVIOS A TODA COLOMBIA</p>
       </div>
       <div class="col-sm-12 col-md-12 col-lg-12 text-center">
-        Diseñado Por
+        Diseñado Por Arg Developer
       </div>
     </footer>
   </div>
