--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Tapetes publicitarios</title>
+  <title>Tapetes publicitarios global publicidad</title>
 </head>
 
 <body>
@@ -47,13 +47,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/slider-collage.jpg" class="d-block w-100" alt="...">
+            <img src="img/slider.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/slider3.jpg" class="d-block w-100" alt="...">
+            <img src="img/slider.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/slider3.jpg" class="d-block w-100" alt="...">
+            <img src="img/slider.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -78,7 +78,7 @@
         </div>
         <div class="info-text col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="">
-            <h2 class="text-center">Tapetes Publicitarios</h2>
+            <h2 class="text-center mt-4 after">TAPETES PUBLICITARIOS</h2>
             <p>El tapete publicitario es un producto poli funcional con excelentes diseños y de muy buena calidad, protege los pisos de marmol, porcelanato, madera, cerámica y alfombras, reduce el costo de mantenimiento y su forma argollada y entrelazada retiene más el mugre que cualquier otro sistema de tapetes. Amortigua sus pasos, es antidelizante, es un elemento decorativo ya que es un excelente medio publicitario que permite ser personalizado para dar mayor fuerza a su imagen corporativa.</p>
           </div>
         </div>
@@ -135,7 +135,7 @@
         <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img order-section">
           <figure>
-            <img src="img/carpet.jpg" alt="">
+            <img src="img/tapete_atrapamugre.jpg" alt="">
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
@@ -148,7 +148,7 @@
         <div class="row">        
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img">
           <figure>
-            <img src="img/carpet1.jpg" alt="">
+            <img src="img/desinfectante.PNG" alt="">
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
@@ -161,7 +161,7 @@
         <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img order-section">
           <figure>
-            <img src="img/carpet2.jpg" alt="">
+            <img src="img/slider-collage.jpg" alt="">
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
@@ -174,7 +174,7 @@
         <div class="row">        
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img">
           <figure>
-            <img src="img/carpet.jpg" alt="">
+            <img src="img/avisos_luminosos.jpg" alt="">
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
@@ -187,7 +187,7 @@
         <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img order-section">
           <figure>
-            <img src="img/carpet2.jpg" alt="">
+            <img src="img/tarjetas_.png" alt="">
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
@@ -200,7 +200,7 @@
         <div class="row">        
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-img">
           <figure>
-            <img src="img/carpet.jpg" alt="">
+            <img src="img/mugs_.jpg" alt="">
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
@@ -212,51 +212,51 @@
     </section>
     <!-- GALERY -->
     <section class="galery" id="galeria">
-      <h3 class="animate__animated animate__fadeInDown title-bold">Galeria de productos</h3>
+      <h3 class="animate__animated animate__fadeInDown title-bold">GALERIA</h3>
       <div class="galery-content m-4">
         <div class="row text-center">
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-          <img src="img/slider.jpg" alt="">
+          <img src="img/slider5.jpg" alt="">
         </div>
       </div>
       </div>
     </section>
     <!-- BENEFICIOS -->
     <section class="benefits">
-      <h2 class="animate__animated animate__fadeInDown title-bold"> Ventajas de un tapete publicitario</h2>
+      <h2 class="animate__animated animate__fadeInDown title-bold text-center"> VENTAJAS DE TENER UN TAPETE </h2>
       <div class=" row benefits-items">
         <div class=" col-sm-4 col-md-4 col-lg-2 col-xl-1 benefits-card">
           <figure>
@@ -316,7 +316,7 @@
     </div>
     <footer id="contacto" class="row">
       <div class="col-sm-12 col-md-6 col-lg-6 text-center">
-        <p> DIRECCION Y CONTACTO</p>
+        <p> globalpublicidad@hotmail.com</p>
         <p>Ibagué manzana c casa # 15 <br> 312589568 </p>
         
       </div>
