--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <p>El tapete publicitario es un producto poli funcional con excelentes diseños y de muy buena calidad, protege los pisos de marmol, porcelanato, madera, cerámica y alfombras, reduce el costo de mantenimiento y su forma argollada y entrelazada retiene más el mugre que cualquier otro sistema de tapetes. Amortigua sus pasos, es antidelizante, es un elemento decorativo ya que es un excelente medio publicitario que permite ser personalizado para dar mayor fuerza a su imagen corporativa.</p>
           </div>
         </div>
+        </div>
       </div>
     </section>
     <section class="products" id="productos">
@@ -165,7 +166,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="publicitario ">TAPETE PUBLICITARIO</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="publicitario">TAPETE PUBLICITARIO</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -310,7 +311,7 @@
     </section>
     <!-- BOTON WHATSAPP-->
     <div class="boton-whatsapp">
-      <a href="https://api.whatsapp.com/send?phone=+57 312 2481808&text= Hola quisiera realizar una cotización." target="_blank" rel="noopener noreferrer" class="link-position" >
+      <a href="https://api.whatsapp.com/send?phone=+57 312 2481808&text= Hola quisiera realizar una cotización." target="_blank" rel="noopener noreferrer" class="link-position">
         <i class="fa fa-whatsapp my-float"></i>
       </a>
     </div>
